lots of changes

--- a/src/index.css
+++ b/src/index.css
@@ -203,6 +203,7 @@ header img {
     padding: 10px 15px;
     border: none;
     background-color: #B5D863;
+    color: black;
     border-radius: 8px;
     line-height: 20.4px;
     float: right;
@@ -686,8 +687,22 @@ input[type='file'] {
     padding: 10px 25px;
     border: none;
     background-color: #B5D863;
+    color: black;
     border-radius: 8px;
     float: right;
+    font-family: 'Ubuntu', sans-serif;
+    max-height: 40px;
+}
+
+/* ***************************** CART ****************************** */
+
+.payment-checkout-btn {
+    padding: 10px 25px;
+    margin-top: 20px;
+    border: none;
+    background-color: #B5D863;
+    color: black;
+    border-radius: 8px;
     font-family: 'Ubuntu', sans-serif;
     max-height: 40px;
 }
