--- a/src/index.css
+++ b/src/index.css
@@ -821,3 +821,14 @@ input[type='file'] {
     font-family: 'Ubuntu', sans-serif;
     max-height: 40px;
 }
+
+
+
+.payment-form {
+    padding: 20px;
+    border-radius: 5px;
+    border: 5px solid black;
+    max-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+}
