--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@ main {
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #BC8034;
-    /* background-color: black; */
     position: fixed;
     top: 0px;
     left: 0px;
@@ -25,15 +25,20 @@ header {
     z-index: 3;
 }
 
+header div {
+    margin-right: 25px;
+}
+
 h1 {
     font-family: 'Comfortaa', cursive;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: white;
     margin: 15px 20px;
 }
 
 header img {
-    margin-right: 30px;
+    margin-left: 20px;
+    width: 25px;
 }
 
 .nav-top {
@@ -112,6 +117,34 @@ header img {
 } */
 
 /* ***************************** HOME ****************************** */
+
+.show-loading-div {
+    display: block;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.loader {
+    border: 7px solid #f3f3f3; /* Light grey */
+    border-top: 7px solid #000000;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    animation: spin 2s linear infinite;
+    margin: auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.no-posts-p {
+    margin: 10px;
+    padding: 10px;
+    background-color: #F0F7E3;
+    border: 1px solid #80b918;
+}
 
 .cart-item-count-p {
     z-index: 4;
@@ -414,11 +447,6 @@ textarea:focus {
 }
 
 form {
-    padding: 20px;
-    border-radius: 5px;
-    /* border: 5px solid #B5D863; */
-    /* border: 5px solid #BC8034;; */
-    border: 5px solid black;
     max-width: 350px;
     margin-left: auto;
     margin-right: auto;
@@ -735,6 +763,12 @@ input[type='file'] {
     border-radius: 8px;
     font-family: 'Ubuntu', sans-serif;
     max-height: 40px;
+}
+
+/* ***************************** PAYMENT *************************************** */
+
+#fictional-payment-p {
+    color: red;
 }
 
 /* ***************************** PURCHASE HISTORY ****************************** */
